factor/style.css
* {
  /* font-size: 64.25%; */
  font-family: "B Titr";
}

html {
  font-size: 62.5;
}
.factor {
  width: 700px;
  margin: 50px auto;
  border: 1px solid black;
  border-radius: 10px;
  position: relative;
}
.sarbarg {
  display: grid;
  grid-template-columns: 5fr 5fr;
  margin: 10px;
  align-items: center;
  justify-items: center;
}

.customer-ditails {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: left;
  align-items: center;

  /* border: 2px solid red; */
}

.items {
  border: 1px dotted black;
  border-radius: 10px;
  margin: 1rem;
}

.table {
  padding: 5px;
}

.radif {
  width: 2px;
}

p {
  margin: 0;
  padding: 0;
}

input {
  font-family: "B Traffic";
  height: 24px;
  font-size: 20px;
}

input[type="text"] {
  box-shadow: inset 0px 0px 3px black;
  border-radius: 5px;
}

.customer-ditails input {
  margin-bottom: 1px;
  box-shadow: inset 0px 0px 5px black;
  border-radius: 5px;
}

.product-name {
  width: 200px;
}

.product-quantity,
.product-price {
  width: 40px;
  appearance: none;
  background: #ddd;
  border-radius: 5px;
  outline: none;
  cursor: pointer;
}

.product-price {
  width: 100px;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none; /* مخفی کردن spinner */
  margin: 0; /* حذف margin */
}

.total-price {
  border: 1px solid black;
  /* display: flex; */
  /* justify-content: flex-end; */
  font-size: 2rem;
  border-radius: 5px;
  padding: 10px;
  padding-bottom: 0;
}

#total-price {
  /* width: auto; */
  text-align: end;
  margin-left: 30px;
}

.sarbarg input {
  border: 0;
  text-align: center;
}

.footer {
  display: grid;
  border: 1px dotted black;
  border-radius: 5px;
  height: 5rem;
  grid-template-columns: 2fr 1fr;
  margin-top: 20px;
  padding: 8px;
}

.customer-place {
  display: block;
  padding: 1rem;
}

.total-price p {
  margin-bottom: 0.5rem;
}

.buttons {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  position: absolute;
  bottom: 0rem;
  right: -5rem;
}

button {
  border: 0.1rem dotted black;
  padding: 0.3rem;
}

